# portfolio-site

./: .babelrc.js  .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .hintrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .stylelintignore  .stylelintrc.js  .stylelintrc.json  ADDITIONAL_MIGRATION_OPPORTUNITIES.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  FINAL_STEP_VERCEL.md  IMPROVEMENT_ROADMAP.md  LICENSE  NEXT_PHASES.md  NEXT_STEPS_RECOMMENDATIONS.md  PERFORMANCE.md  PHASE7_CONTENT_AUDIT_REPORT.md  PHASE7_SESSION_SUMMARY.md  PHASE8A_COMPLETION.md  POSTGRES_CONNECTION_FIX.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SECURITY.md  SESSIONS.md  SESSION_NOTES.md  SESSION_NOTES_2025-10-20.md  SESSION_NOTES_2025-10-21.md  SESSION_NOTES_2025-10-21_Session6.md  SETUP_GUIDE.md  TESTING.md  (+17 more)
.cache/: csp-nonces.json
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/lighthouse/: lighthouserc.json
.github/site/: index.html
.github/workflows/: azure-static-web-apps.yml  ci-cd.yml  ci.yml  codeql.yml  db-backup.yml  deploy-backend.yml  deploy-frontend.yml  deploy.yml  rebake-frontend.yml  scorecard.yml  uptime.yml
.husky/: commit-msg  pre-commit  pre-push
.zap/: rules.tsv
api/: requirements.txt
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  Dockerfile.prod  add_logo_column.py  alembic.ini  fly.toml  gunicorn_conf.py  migrate_data.py  migrate_database.py  migrate_real_content.py  populate_documents.py  populate_documents_postgres.py  populate_experience_details.py  populate_projects_postgres.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_companies_api.py  test_projects_api.py  update_media_urls_postgres.py  update_thesis_metadata.py  verify_media.py
backend/alembic/: README  env.py
backend/alembic/versions/: 19fd54de976f_sync_schema_with_current_models.py  7a4f2c8e15d3_user_is_admin_not_null.py  b2e9d3f51c80_refresh_token_table.py  c3f1d96a4b27_sprint_3_schema.py  d8a4c92b1f73_oss_contributions_table.py  da9f04bf81a7_fresh_baseline_and_page_views_city.py  e9b1c47d2f86_capture_prod_drift.py  f2b8d61c4a93_add_companies_outcomes.py  f4a1c9d20e57_cv_profile_table.py
backend/app/: __init__.py  config.py  database.py  init_db.py  main.py  seed_data.py
backend/app/api/: education.py
backend/app/api/v1/: analytics.py  auth.py  companies.py  cv.py  documents.py  education.py  github.py  health.py  metrics.py  oss.py  oss_public.py  projects.py  skills.py
backend/app/api/v1/endpoints/: admin_panel.py  documents.py  errors.py  health.py  metrics.py  oss.py
backend/app/core/: db_helpers.py  deps.py  geo_ip.py  ip_utils.py  security.py
backend/app/middleware/: __init__.py  cache.py  compression.py  error_tracking.py  logging.py  performance.py  rate_limit.py
backend/app/models/: __init__.py  analytics.py  company.py  contact.py  cv_profile.py  document.py  education.py  oauth_state.py  oss.py  project.py  refresh_token.py  skill.py  user.py
backend/app/schemas/: __init__.py  _validators.py  analytics.py  auth.py  company.py  cv_profile.py  document.py  education.py  errors.py  github.py  metrics.py  oss.py  project.py  skill.py
backend/app/services/: __init__.py  bucket_classifier.py  github_service.py  oss_queries.py  oss_sync.py
backend/app/utils/: ip_hash.py  logger.py
backend/scripts/: migrate.py  migrate_data.py  update_complete_with_media.py  update_production_data.py
backend/tests/: conftest.py  test_admin_authorization.py  test_admin_panel.py  test_analytics.py  test_auth.py  test_companies.py  test_config.py  test_cv_export.py  test_database.py  test_deps.py  test_documents.py  test_education.py  test_errors.py  test_geo_ip.py  test_github.py  test_github_service.py  test_health.py  test_init_db.py  test_ip_hash.py  test_ip_utils.py  test_logger.py  test_main.py  test_metrics.py  test_middleware.py  test_migration_drift.py  test_models.py  test_oauth_state.py  test_oss_classifier.py  test_oss_endpoint.py  test_oss_public.py  test_oss_schemas.py  test_oss_sync.py  test_projects.py  test_rate_limiting.py  test_schemas.py  test_security.py  test_seed_data.py  test_skills.py  test_utils_logger.py  test_validators_xss.py
backend/tests/fixtures/: oss_dashboard_response.json
config/: .editorconfig  .eslintrc.js  .htmlvalidaterc.json  .lighthouserc.js  .prettierrc.json  .stylelintrc.json  jest.config.js  playwright.config.js  staticwebapp.config.json
core/: views.py
cv/: README.md  resume.json
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  README.md  VERCEL_FIX.md  admin-oss-dashboard-NOTES.md
docs/archive/: ACTION_PLAN.md  NEXT_STEPS_RECOMMENDATIONS.md  PHASE7_FINAL_VERIFICATION.md  PHASE7_VERIFICATION.md  PHASE_6_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  VERCEL_ENV_FIX.md
docs/guides/: MONITORING.md  TOOLING.md
docs/migration/: FEATURE_PARITY_ANALYSIS.md  PHASE9A_COMPLETION.md
frontend/: .env.example  .gitignore  .npmrc  .prettierignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.js  vite.config.production.js  vite.config.ts  vitest.config.js  vitest.config.ts
frontend/public/: manifest.webmanifest  offline.html  robots.txt  sitemap.xml  sw.js
hub/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
scripts/: add-csp-nonces.js  add-sri-hashes.js  cleanup_database.py  fix-database.sh  optimize-images.js  populate-database.sh  security-check.js  update-csp-config.js  validate-links.js  verify-deployment.sh
site/: fdf.html  hermes.html  index.html  karolinska.html  manifest.json  manifest.webmanifest  market-analysis.html  offline.html  philips.html  robots.txt  scania.html  sitemap.xml  softpro.html  sos.html  splash.html  staticwebapp.config.json  sw.js  web.config
tests/: TESTING_GUIDE.md  global-setup.js  global-teardown.js  homepage.spec.js  navigation.spec.js  theme.spec.js
(+252 files in other folders)
