[project]
name = "portfolio-backend"
version = "1.0.0"
description = "Portfolio website backend API"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]==0.32.1",
    "gunicorn==23.0.0",
    "python-multipart==0.0.20",
    # Database
    "sqlalchemy==2.0.44",
    "asyncpg==0.31.0",
    "alembic==1.17.2",
    "greenlet==3.1.1",
    # Authentication
    "PyJWT==2.10.1",
    "passlib[bcrypt]==1.7.4",
    "authlib==1.6.5",
    "httpx==0.28.1",
    # Validation & Serialization
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "email-validator==2.3.0",
    # Utilities
    "python-dotenv==1.2.1",
    "python-json-logger==4.0.0",
    "slowapi==0.1.9",
    # Monitoring
    "sentry-sdk[fastapi]==2.19.2",
    # Security fixes (transitive deps - CVE patches)
    "starlette>=0.45.0",
    "urllib3>=2.6.0",
    "filelock>=3.20.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "aiosqlite==0.21.0",
    "ruff==0.14.7",
    "mypy==1.19.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "static*"]

# Ruff configuration
[tool.ruff]
# Ruff replaces: Black, isort, Flake8, autoflake, and many Flake8 plugins
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "PERF",   # perflint (performance)
]

# Ignore specific rules that are too strict or not applicable
ignore = [
    "E501",     # Line too long (handled by formatter)
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "SIM108",   # Use ternary operator (sometimes less readable)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]  # Unused imports, module-level imports
"tests/**" = ["S101", "PLR2004", "PLR0913", "PLC0415"]  # assert, magic values, many args, import in function

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix line endings
line-ending = "lf"

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, can make stricter later
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_error_context = true

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "authlib.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
    "ignore::pydantic.PydanticDeprecatedSince20",
    "ignore:Using insecure development SECRET_KEY:UserWarning",
    "ignore:The event_loop fixture provided by pytest-asyncio:DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
